--- a/design/style.css
+++ b/design/style.css
@@ -82,6 +82,8 @@ main{
     border: none;
     outline: none;
     cursor: pointer;
+    display: flex;
+    align-items: center;
     -webkit-box-shadow: 2px 2px 8px 0px rgba(0,0,0,1);
     -moz-box-shadow: 2px 2px 8px 0px rgba(0,0,0,1);
     box-shadow: 2px 2px 8px 0px rgba(0,0,0,1);
